# Yatl

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: usage.en.md  usage.md  usage.ru.md
src/yaql/: parser.py  server.py  unit.test.yaml
src/yatl/: extractor.py  parser.py  render.py  request_builder.py  run.py  server.py  step_executor.py  utils.py  validator.py
tests/: unit.test.yaml  url_shortner.test.yaml
tests_yaml/: base_api.test.yaml  ping.test.yaml  server.test.yaml  url_shortner.test.yaml  xml.test.yaml
