[project]
name = "yatl"
version = "0.1.0"
description = "Yet Another Testing Language"
authors = [
    {name = "",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "ruff (>=0.15.4,<0.16.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "lxml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "yatl", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
